events from last and next weeks

--- a/events/days-sample.yml
+++ b/events/days-sample.yml
@@ -1,17 +1,27 @@
 january:
-  1: 
+  1:
     - New Year Celebration
-  2: 
+  2:
     - Last Week Event
-  5: 
+  5:
     - STRANGE event
-  6: 
+  6:
     - Three Wisdoms Celebration
-  8: 
+  8:
     - Friend's birthday
     - Other event
-  18: 
-    - Next Week event
+  16:
+    - Great Celebration
+  17:
+    - Friend's nameday
+    - What a event
+  18:
+    - Event for 18th
+  19:
+    - Some 19th event
+    - More and more
+  22:
+    - Writing an article
 february:
 march:
 april:
